refactor: simplify and optimize component creation for OperationCommand